--- a/index.html
+++ b/index.html
@@ -4,9 +4,118 @@
 <script type="text/javascript" src="moody.js"></script>
 </head>
 <body>
-<label for="plateWidth">Surface plate width: </label><input placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/>
-<label for="plateHeight">Surface plate height: </label><input placeholder="48" name="plateHeight" id="plateHeight" maxlength="5" />
-<label for="reflectorFootSpacing">Reflector foot spacing: </label><input placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5" />
-<button type="button" id="go">Go</button>
+<label for="plateHeight">Surface plate height: </label><input placeholder="48" name="plateHeight" id="plateHeight" maxlength="5" /><br/>
+<label for="plateWidth">Surface plate width: </label><input placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/><br/>
+<label for="reflectorFootSpacing">Reflector foot spacing: </label><input placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5" /><br/>
+<button type="button" id="go">Go</button><br/><br/>
+<label for="plateDiagonal">Surface plate diagonal length: </label><input name="plateDiagonal" id="plateDiagonal" readonly /><br/>
+<label for="diagonalInset">Diagonal inset: </label><input name="diagonalInset" id="diagonalInset" readonly /><br/>
+<label for="numHorizontalStations">Number of Horizontal Stations: </label><input name="numHorizontalStations" id="numHorizontalStations" readonly /><br/>
+<label for="numVerticalStations">Number of Vertical Stations: </label><input name="numVerticalStations" id="numVerticalStations" readonly /><br/>
+<label for="numDiagonalStations">Number of Diagonal Stations: </label><input name="numDiagonalStations" id="numDiagonalStations" readonly /><br/>
+<table id="topStartingDiagonalTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="bottomStartingDiagonalTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="northPerimeterTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="southPerimeterTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="eastPerimeterTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="westPerimeterTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="horizontalCenterLineTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
+<table id="verticalCenterLineTable" style="visibility: hidden">
+  <tr>
+    <th scope="col">Station No.</th>
+    <th scope="col">Autcollimator Readings (0.1" arc)</th>
+    <th scope="col">Angular Displacements (0.1" arc)</th>
+    <th scope="col">Sum of Displacements (0.1" arc)</th>
+    <th scope="col">Cumulative Correction Factor (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Datum Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.1" arc)</th>
+    <th scope="col">Displacement from Base Plane (0.0001")</th>
+  </tr>
+</table>
 </body>
 </html>
