--- a/index.html
+++ b/index.html
@@ -60,26 +60,25 @@
   </style>
 </head>
 <body>
-<label for="plateHeight">Surface plate height: </label><input placeholder="48" name="plateHeight" id="plateHeight"
-                                maxlength="5"/><br/>
-<label for="plateWidth">Surface plate width: </label><input placeholder="72" name="plateWidth" id="plateWidth"
-                              maxlength="5"/><br/>
-<label for="reflectorFootSpacing">Reflector foot spacing: </label><input placeholder="4" name="reflectorFootSpacing"
-                                     id="reflectorFootSpacing" maxlength="5"/><br/>
-<button type="button" id="createTables">Create Tables</button>&nbsp;<button type="button" id="fillTestData">Fill Test
-  Data
-</button>
+<label for="plateHeight">Surface plate height: </label>
+<input placeholder="48" name="plateHeight" id="plateHeight" maxlength="5"/><br/>
+<label for="plateWidth">Surface plate width: </label>
+<input placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/><br/>
+<label for="reflectorFootSpacing">Reflector foot spacing: </label>
+<input placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5"/><br/>
+<button type="button" id="createTables">Create Tables</button>&nbsp;
+<button type="button" id="fillTestData">Fill Test Data</button>
 <br/><br/>
-<label for="plateDiagonal">Surface plate diagonal length: </label><input name="plateDiagonal" id="plateDiagonal"
-                                     readonly/><br/>
-<label for="diagonalInset">Diagonal inset: </label><input name="diagonalInset" id="diagonalInset" readonly/><br/>
-<label for="numHorizontalStations">Number of Horizontal Stations: </label><input name="numHorizontalStations"
-                                         id="numHorizontalStations"
-                                         readonly/><br/>
-<label for="numVerticalStations">Number of Vertical Stations: </label><input name="numVerticalStations"
-                                       id="numVerticalStations" readonly/><br/>
-<label for="numDiagonalStations">Number of Diagonal Stations: </label><input name="numDiagonalStations"
-                                       id="numDiagonalStations" readonly/><br/>
+<label for="plateDiagonal">Surface plate diagonal length: </label>
+<input name="plateDiagonal" id="plateDiagonal" readonly/><br/>
+<label for="diagonalInset">Diagonal inset: </label>
+<input name="diagonalInset" id="diagonalInset" readonly/><br/>
+<label for="numHorizontalStations">Number of Horizontal Stations: </label>
+<input name="numHorizontalStations" id="numHorizontalStations" readonly/><br/>
+<label for="numVerticalStations">Number of Vertical Stations: </label>
+<input name="numVerticalStations" id="numVerticalStations" readonly/><br/>
+<label for="numDiagonalStations">Number of Diagonal Stations: </label>
+<input name="numDiagonalStations" id="numDiagonalStations" readonly/><br/>
 <br/>
 <svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 500px">
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
@@ -311,7 +310,6 @@
   </div>
   <div id="verticalCenterTableSvgContainer" style="flex: 2;">
   </div>
-</div>
 </div>
 </body>
 </html>
