Switch from lines to paths as Chrome doesn't allow for a TextPath to reference a Line, only a Path.

--- a/index.html
+++ b/index.html
@@ -84,54 +84,54 @@
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
   <rect id="insideRect" fill="white" stroke="black" stroke-width="0.01em"/>
   <g id="topStartingDiagonalLineGroup" stroke="var(--l1-color)" fill="var(--l1-color)" stroke-width="0.018em">
-    <line id="topStartingDiagonalLine"/>
+    <path id="topStartingDiagonalLine"/>
     <text style="font-size: 3px; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
-      <textPath xlink:href="#topStartingDiagonalLine" startOffset="25%">⮞</textPath>
+      <textPath href="#topStartingDiagonalLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="bottomStartingDiagonalLineGroup" stroke="var(--l2-color)" fill="var(--l2-color)" stroke-width="0.018em">
-    <line id="bottomStartingDiagonalLine"/>
+    <path id="bottomStartingDiagonalLine"/>
     <text style="font-size: 3px; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
-      <textPath xlink:href="#bottomStartingDiagonalLine" startOffset="75%">⮜</textPath>
+      <textPath href="#bottomStartingDiagonalLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="northPerimeterLineGroup" stroke="var(--l3-color)" fill="var(--l3-color)" stroke-width="0.018em">
-    <line id="northPerimeterLine"/>
+    <path id="northPerimeterLine"/>
     <text style="font-size: 3px; dominant-baseline: central" dy="-0.055em">
-      <textPath xlink:href="#northPerimeterLine" startOffset="75%">⮜</textPath>
+      <textPath href="#northPerimeterLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="eastPerimeterLineGroup" stroke="var(--l4-color)" fill="var(--l4-color)"  stroke-width="0.018em">
-    <line id="eastPerimeterLine"/>
+    <path id="eastPerimeterLine"/>
     <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
-      <textPath xlink:href="#eastPerimeterLine" startOffset="25%">⮞</textPath>
+      <textPath href="#eastPerimeterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="southPerimeterLineGroup" stroke="var(--l5-color)" fill="var(--l5-color)"  stroke-width="0.018em">
-    <line id="southPerimeterLine"/>
+    <path id="southPerimeterLine"/>
     <text style="font-size: 3px; dominant-baseline: central;" dy="-0.07em">
-      <textPath xlink:href="#southPerimeterLine" startOffset="25%">⮞</textPath>
+      <textPath href="#southPerimeterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="westPerimeterLineGroup" stroke="var(--l6-color)" fill="var(--l6-color)"  stroke-width="0.018em">
-    <line id="westPerimeterLine"/>
+    <path id="westPerimeterLine"/>
     <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
-      <textPath xlink:href="#westPerimeterLine" startOffset="75%">⮜</textPath>
+      <textPath href="#westPerimeterLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="horizontalCenterLineGroup" stroke="var(--l7-color)" fill="var(--l7-color)"  stroke-width="0.018em">
-    <line id="horizontalCenterLine"/>
+    <path id="horizontalCenterLine"/>
     <text style="font-size: 3px; dominant-baseline: central;" dy="-0.055em">
-      <textPath xlink:href="#horizontalCenterLine" startOffset="25%">⮞</textPath>
+      <textPath href="#horizontalCenterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="verticalCenterLineGroup" stroke="var(--l8-color)" fill="var(--l8-color)"  stroke-width="0.018em">
-    <line id="verticalCenterLine"/>
+    <path id="verticalCenterLine"/>
     <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
-      <textPath xlink:href="#verticalCenterLine" startOffset="25%">⮞</textPath>
+      <textPath href="#verticalCenterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
 </svg>
