Add initial 3D WebGL table renderer - only draws the lines for now. Going to work on triangulating the point cloud to a mesh.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MoodyJS</title>
+  <script src="webgl-debug.js"></script>
   <script type="text/javascript" src="moody.js"></script>
   <style>
     :root {
