--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </style>
 </head>
 <body>
-<label for="plateHeight">Surface plate height: </label>
+<label for="plateHeight">Surface plate length: </label>
 <input type="number" placeholder="48" name="plateHeight" id="plateHeight" maxlength="5"/><br/>
 <label for="plateWidth">Surface plate width: </label>
 <input type="number" placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/><br/>
@@ -80,6 +80,22 @@
 <input name="numVerticalStations" id="numVerticalStations" readonly/><br/>
 <label for="numDiagonalStations">Number of Diagonal Stations: </label>
 <input name="numDiagonalStations" id="numDiagonalStations" readonly/><br/>
+ASME Overall Flatness Requirements:
+<label for="gradeAA">Grade AA (µinch): </label>
+<input name="gradeAA" id="gradeAA" readonly/><br/>
+<label for="gradeA">Grade A (µinch): </label>
+<input name="gradeA" id="gradeA" readonly/><br/>
+<label for="gradeB">Grade B (µinch): </label>
+<input name="gradeB" id="gradeB" readonly/><br/>
+ISO Overall Flatness Requirements:
+<label for="grade0">Grade 0 (µinch): </label>
+<input name="grade0" id="grade0" readonly/><br/>
+<label for="grade1">Grade 1 (µinch): </label>
+<input name="grade1" id="grade1" readonly/><br/>
+<label for="grade2">Grade 2 (µinch): </label>
+<input name="grade2" id="grade2" readonly/><br/>
+<label for="overallFlatness">Overall flatness (µinch): </label>
+<input name="overallFlatness" id="overallFlatness" readonly/><br/>
 <br/>
 <svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 500px">
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
