Wire up 'Show Heatmap' and 'Lighting On' checkboxes. 'Show UJ Lines' still TODO.

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@ ISO Overall Flatness Requirements:<br/>
 <br/>
 <input type="checkbox" id="showLines" name="showLines" />
 <label for="showLines">Show Union Jack Lines</label><br/>
-<input type="checkbox" id="showHeatmap" name="showHeatmap" />
+<input type="checkbox" id="showHeatmap" name="showHeatmap" checked/>
 <label for="showHeatmap">Show Heatmap</label><br/>
+<input type="checkbox" id="lightingOn" name="lightingOn" checked/>
+<label for="lightingOn">Lighting On</label><br/>
 <br/>
 <svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 500px">
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
